# a_star

./: .dockerignore  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.ps1  build.sh  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/agents/: copilot-instructions.md  speckit.plans.agent.md
.github/prompts/: speckit.plans.prompt.md
.prompt/: consituition.md
.prompt/01_research/: plan.md  spec.md
.prompt/01_research/checklists/: requirements.md
.prompt/02_rust/: plan.md  spec.md
a_star/: __init__.py  pure_python.py
docs/: conf.py  index.rst
scripts/: profile_rust_astar.py
specs/001-plan/: data-model.md  plan.md  quickstart.md  research.md  runtime-profiling-report.md  rustification-sdd-requirements.md  spec.md  tasks.md
specs/001-plan/artifacts/: .gitignore
specs/001-plan/contracts/: README.md
specs/001-rust-astar-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-astar-core/artifacts/: viztracer-rust.html  viztracer-rust.json
specs/001-rust-astar-core/checklists/: requirements.md
specs/001-rust-astar-core/contracts/: README.md  astar.openapi.yaml
src/: lib.rs
tests/python/: test_astar_native.py  test_example.py
tests/rust/: lib_tests.rs
